--- a/.env
+++ b/.env
@@ -1,5 +1,4 @@
-MONGO_URI=mongodb+srv://root:admin@clusterpruebas.8qmotq9.mongodb.net/apv?retryWrites=true&w=majority  
-
+MONGO_URLATlas=mongodb+srv://root:admin@clusterpruebas.8qmotq9.mongodb.net/apv?retryWrites=true&w=majority
 JWT_SECRET=secret token 
 
 
@@ -9,4 +8,4 @@ EMAIL_PASS= ********5f87
 EMAIL_HOST=sandbox.smtp.mailtrap.io
 EMAIL_PORT=2525
 
-FRONTEND_URL=http://localhost:3000
+FRONTEND_URL=https://front-appveterinarios.vercel.app
